--- a/templates/posts/post_list.html
+++ b/templates/posts/post_list.html
@@ -13,7 +13,7 @@
     <h5 class="card-title">{{ post.title }}</h5>
     <p class="card-text">{{ post.content }}.</p>
     <p class="card-text">{{ post.rate }}.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <a href="/posts/{{ post.id }}" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
 {% endfor %}
