--- a/templates/posts/post_list.html
+++ b/templates/posts/post_list.html
@@ -2,6 +2,11 @@
 {% load static %}
 
 {% block content %}
+<form action="" method="get" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Search</button>
+</form>
 {% for post in posts %}
 <div class="card" style="width: 18rem;">
   {% if post.image %}
@@ -17,4 +22,12 @@
   </div>
 </div>
 {% endfor %}
+<div> style="dysplay: flex: justify-content: center: margin-top: 20px: margin-bottom: 20px"
+        {% for i in max_pages %}
+            <a href="/posts/?page={{i}}" class="btn btn-primary">
+              {{ i }}
+            </a>
+        {% endfor %}
+                
+   </div>
 {% endblock %}
